--- a/PROJECT/METHODOLOGY.ipynb
+++ b/PROJECT/METHODOLOGY.ipynb
@@ -1,12 +1,91 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0dcfd874-c7f4-4ec6-96cf-a0a8a811fa46",
+   "cell_type": "markdown",
+   "id": "bd6d6d72-8710-4a96-a943-e1240a3ae435",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## METHODOLOGY"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c551b08-03e4-4189-9268-559fd7601dbf",
+   "metadata": {},
+   "source": [
+    "**Σε αυτό το αρχείο αναλύεται όλη η διαδικασία και η μεθοδολογία που ακολουθήθηκε με σκοπό να πραγματοποιηθεί το ρεπορτάζ με τίτλο \"Πόσο ελεύθεροι και ασφαλείς είναι άραγε οι δημοσιογράφοι στη Μέση Ανατολή;\" το οποίο υπογράφουν οι Αθανασία Σπηλιοπούλου και Βαϊα-Μαρία Τάτα και βασίζεται στα δεδομένα της Committee to Protect Journalists.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d052f7a-05d6-4cd8-8a36-281e8663dd6b",
+   "metadata": {},
+   "source": [
+    "#### ΣΥΛΛΟΓΗ ΔΕΔΟΜΕΝΩΝ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1efc3ed-7650-41af-8a47-17321dcae02e",
+   "metadata": {},
+   "source": [
+    "- Η συλλογή των δεδομένων έγινε από την ιστοσελίδα της Committee to Protect Journalists.\n",
+    "- Η συλλογή δεδομένων αφορούσε περιστατικά δημοσιογράφων και εργαζομένων στα ΜΜΕ  που σκοτώθηκαν, φυλακίστηκαν και εξαφανίστηκαν.\n",
+    "- Για την κάθε κατηγορία δημιουργήθηκε ένα ξεχωριστό dataset.\n",
+    "- Για τη συλλογή των δεδομένων ακολουθήθηκε η μέθοδος του scraping με Selenium και Beautiful Soup.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13fddc45-e097-4cec-a87b-31249c709450",
+   "metadata": {},
+   "source": [
+    "#### ΚΑΘΑΡΙΣΜΟΣ ΔΕΔΟΜΕΝΩΝ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7f2e935-8a9b-4cd6-8ccc-bf8dfa2a11a0",
+   "metadata": {},
+   "source": [
+    "- Το πρώτο βήμα στον καθαρισμό των δεδομένων ήταν η ενοποίηση όλων των dataset που είχαν δημιουργηθεί κατά τη διάρκεια της συλλογής δεδομένων σε ένα dataset που τα περιελάμβανε όλα.\n",
+    "- Για τον καθαρισμό των δεδομένων με pandas διορθώθηκαν λάθη που προέκυψαν κατά τη διάρκεια του scraping, αντικαταστάθηκαν όποιες κενές τιμές έπρεπε να αντικατασταθούν και αφαιρέθηκαν στοιχεία που ήταν περιττά για την έρευνα.\n",
+    "- Ως επιπλέον εργαλείο χρησιμοποιήθηκε η χειροκίνητη διόρθωση στοιχείων με Google Spreadsheets, καθώς ήταν πολύ λίγα και συγκεκριμένα."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4ed29aa-6a0e-4dac-bc14-44a6b9a718f0",
+   "metadata": {},
+   "source": [
+    "#### ΑΝΑΛΥΣΗ ΔΕΔΟΜΕΝΩΝ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e1694b1-ec1e-422b-906c-f1529ff5bd09",
+   "metadata": {},
+   "source": [
+    "- Για την ανάλυση των δεδομένων δημιουργήθηκαν νέες στήλες στο dataset, ώστε με βάση τις αρχικές πληροφορίες να υπάρχει η δυνατότητα ποσοτικής ανάλυσης των δεδομένων.\n",
+    "- Κατά τη διάρκεια της έρευνας αναλύθηκαν όλες οι επιθέσεις στον Τύπο ως σύνολο για τις χώρες της Μέσης Ανατολής και ως ένα διαφορετικό σύνολο για τις υπόλοιπες χώρες του κόσμου, όλες οι επιθέσεις επί μέρους για την κάθε χώρα της Μέσης Ανατολής, τα ποσοστά των ειδών των επιθέσεων στις χώρες της Μέσης Ανατολής, το διαχωρισμό των επιθέσεων στη Μέση Ανατολή με βάση το φύλο και το διαχωρισμό των επιθέσεων στη Μέση Ανατολή με βάση το αν το εκάστοτε περιστατικό είναι εργαζόμενος σε κάποιο μέσο ή freelancer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "009a3128-d29a-4dd0-95a7-e6b576bdbf53",
+   "metadata": {},
+   "source": [
+    "#### ΟΠΤΙΚΟΠΟΙΗΣΗ ΔΕΔΟΜΕΝΩΝ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d895498f-a70d-4dd8-bd2e-ae117a0daf80",
+   "metadata": {},
+   "source": [
+    "- Η οπτικοποίηση των δεδομένων πραγματοποιήθηκε μέσω του Datawrapper.\n",
+    "- Στην περίπτωση του γραφήματος για τις επιθέσεις επί μέρους για την κάθε χώρα της Μέσης Ανατολής, όπου επιλέχθηκε ένα γράφημα-χάρτης, από το γράφημα απουσιάζει το Αφγανιστάν, καθώς, αν και στην ανάλυσή μας θεωρήθηκε ως χώρα της Μέσης Ανατολής, το format του εν λόγω γραφήματος δεν συμπεριελάμβανε την εν λόγω χώρα. Εμμείναμε στην επιλογή μας αυτή, καθώς τα δεδομένα που χρησιμοποιήθηκαν για αυτή την οπτικοποίηση δεν επηρεάστηκαν από την απουσία των δεδομένων που αφορούν το Αφγανιστάν."
+   ]
   }
  ],
  "metadata": {
