--- a/PROJECT/visualisation.ipynb
+++ b/PROJECT/visualisation.ipynb
@@ -44744,7 +44744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "e5e4f7aa-a9b9-4957-8851-90bf686f7afd",
    "metadata": {},
    "outputs": [
@@ -45224,7 +45224,7 @@
        "62  2023.0          Middle East      46"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45237,7 +45237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "dd095eb8-dcb8-4cd6-8500-7629285a4d58",
    "metadata": {},
    "outputs": [
@@ -45605,7 +45605,7 @@
        "62  2023.0          Middle East      46"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45628,7 +45628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "c0cbc31d-dadc-45b5-a146-5b99c30b500a",
    "metadata": {},
    "outputs": [],
@@ -45639,18 +45639,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "8273a2ba-86a7-4db1-b0b7-5f5a26b06c9d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#turn the attack column vlaues into percentages\n",
+    "#turn the attack column values into percentages\n",
     "kind_of_attacks = kind_of_attacks.attack.value_counts(dropna=False,normalize=True)*100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "1df88472-dc81-4616-8875-b03b7552563f",
    "metadata": {},
    "outputs": [
@@ -45664,7 +45664,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45677,18 +45677,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
+   "id": "5a6d49a5-2bb3-4b2d-bd1c-f50e70554258",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>attack</th>\n",
+       "      <th>percentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Killed</td>\n",
+       "      <td>76.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Imprisoned</td>\n",
+       "      <td>20.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Missing</td>\n",
+       "      <td>2.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       attack  percentage\n",
+       "0      Killed        76.8\n",
+       "1  Imprisoned        20.5\n",
+       "2     Missing         2.8"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# turn the results into a df\n",
+    "df_koa = pd.DataFrame(kind_of_attacks)\n",
+    "df_koa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "e3fff52b-8390-41aa-b029-4bf83e32632a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save to csv\n",
-    "kind_of_attacks.to_csv('kind_of_attacks_visualisation.csv',index=False)"
+    "df_koa.to_csv('df_koa_visualisation.csv',index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "id": "59df01c7-b836-4f3c-bffd-6cb6bc9c86ec",
    "metadata": {},
    "outputs": [
@@ -45705,35 +45774,42 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr>\n",
+       "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>gender</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">number</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>region</th>\n",
-       "      <th></th>\n",
-       "      <th>All other countries</th>\n",
-       "      <th>Middle East</th>\n",
+       "      <th>number</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Female</td>\n",
+       "      <td>All other countries</td>\n",
        "      <td>120</td>\n",
-       "      <td>75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>Middle East</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>Male</td>\n",
+       "      <td>All other countries</td>\n",
        "      <td>1298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>Middle East</td>\n",
        "      <td>572</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -45741,26 +45817,27 @@
        "</div>"
       ],
       "text/plain": [
-       "        gender              number            \n",
-       "region         All other countries Middle East\n",
-       "0       Female                 120          75\n",
-       "1         Male                1298         572"
+       "   gender               region  number\n",
+       "0  Female  All other countries     120\n",
+       "1  Female          Middle East      75\n",
+       "2    Male  All other countries    1298\n",
+       "3    Male          Middle East     572"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#groub data by gender and region for the visualisation\n",
-    "gender = df.groupby(['gender', 'region']).number.sum().to_frame().unstack().reset_index()\n",
+    "gender = df.groupby(['gender', 'region']).number.sum().reset_index()\n",
     "gender"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "id": "1545fef4-521b-4fef-b828-8915f7b1470f",
    "metadata": {},
    "outputs": [],
@@ -45771,7 +45848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "id": "b0fbede4-0071-4779-96ce-85d6ab2d0aad",
    "metadata": {},
    "outputs": [
@@ -45788,35 +45865,42 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr>\n",
+       "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>staff_freelancer</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">number</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>region</th>\n",
-       "      <th></th>\n",
-       "      <th>All other countries</th>\n",
-       "      <th>Middle East</th>\n",
+       "      <th>number</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Freelancer</td>\n",
+       "      <td>All other countries</td>\n",
        "      <td>166</td>\n",
-       "      <td>145</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>Freelancer</td>\n",
+       "      <td>Middle East</td>\n",
+       "      <td>145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>Staff</td>\n",
+       "      <td>All other countries</td>\n",
        "      <td>1297</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Staff</td>\n",
+       "      <td>Middle East</td>\n",
        "      <td>582</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -45824,26 +45908,39 @@
        "</div>"
       ],
       "text/plain": [
-       "       staff_freelancer              number            \n",
-       "region                  All other countries Middle East\n",
-       "0            Freelancer                 166         145\n",
-       "1                 Staff                1297         582"
+       "  staff_freelancer               region  number\n",
+       "0       Freelancer  All other countries     166\n",
+       "1       Freelancer          Middle East     145\n",
+       "2            Staff  All other countries    1297\n",
+       "3            Staff          Middle East     582"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fr_staff = df.groupby(['staff_freelancer', 'region']).number.sum().to_frame().unstack().reset_index()\n",
+    "#groub data by staff or freelancer and region for the visualisation\n",
+    "fr_staff = df.groupby(['staff_freelancer', 'region']).number.sum().reset_index()\n",
     "fr_staff"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "2e27c0de-19b3-4e77-82d4-43ddf25e87ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save to csv\n",
+    "fr_staff.to_csv('fr_staff_visualisation.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7bfd6d8-033d-402f-9656-6d77d44e297e",
    "metadata": {},
    "outputs": [],
    "source": []
